# salvage

./: .eslintrc.cjs  LICENSE  README.md  components.json  dev-app-update.yml  electron-builder.yml  electron.vite.config.1690414200873.mjs  electron.vite.config.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.web.json
.github/workflows/: main.yml  manual-release.yml  release.yml
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  commands.rs  debouncer.rs  file.rs  lib.rs  logger.rs  main.rs  salvage.rs  statistics.rs  tauri_lib.rs  watcher.rs
src/app/: globals.css  layout.tsx
src/app/(dashboard)/: layout.tsx  page.tsx
src/app/(dashboard)/_components/: backup-item.tsx  dashboard-breadcrumb.tsx  dashboard.tsx  data-table-pagination.tsx  data-table.tsx
src/app/(help)/: layout.tsx
src/app/(lobby)/: layout.tsx  page.tsx
src/app/_components/: start-backup-watcher.tsx
src/components/: add-backup-dialog.tsx  button-action.tsx  button-link.tsx  card-message.tsx  draggable.tsx  icons.tsx  loadings.tsx  menu-icon.tsx  tailwind-indicator.tsx
src/components/forms/: backup-input-field.tsx  exclusions-form.tsx  form-action-buttons.tsx  overview-form.tsx  paths-form.tsx
src/components/layouts/: site-footer.tsx  site-header.tsx  theme-toggle.tsx  title-bar.tsx
src/components/providers/: logger-provider.tsx  providers.tsx  react-query-provider.tsx  theme-provider.tsx
src/components/shells/: shell.tsx
src/components/ui/: alert-dialog.tsx  breadcrumb.tsx  button-card.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  icons.tsx  menubar.tsx  scroll-area.tsx  select.tsx  switch.tsx  table.tsx  toast.tsx  toaster.tsx
src/hooks/: use-backup-by-id.tsx  use-backup-form.tsx  use-backup-selected.tsx  use-backup.tsx  use-backups.tsx  use-env.tsx  use-file-sizes-by-id.tsx  use-salvage-data.tsx  use-sidebar.tsx  use-tabs.tsx  use-tauri-size.tsx
src/lib/: fonts.ts  tauri.ts  utils.ts
src/lib/backup/: actions.ts  actions.tsx
src/lib/validations/: backup.ts
src/main/: copy.ts  createWindow.ts  index.ts  paths.ts  store.ts  utils.ts  watcher.ts
src/preload/: index.d.ts  index.ts  types.ts
src/renderer/src/: App.tsx  main.tsx
src/styles/: globals.css
src/types/: index.ts
(+81 files in other folders)
