[package]
name = "app"
version = "2.3.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
rfd = "0.14.1"
notify = "6.1.1"
tokio = { version = "1", features = ["full"] }
debounce = "0.2.2"
walkdir = "2"
anyhow = "1.0"
chrono = "0.4"
open = "3.0"
dotenvy = "0.15.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
